fix pathway/lp terms

--- a/html/lesson_plans/lesson-plan-template.html
+++ b/html/lesson_plans/lesson-plan-template.html
@@ -50,9 +50,9 @@
           <img width="100%" height="300px" style="background: #e6e6e6;"/>
 
           <section aria-labelledby="lesson-plan-specs">
-						<h3 id="lesson-plan-specs">Pathway Production Details</h3>
+						<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
-            <p><strong>Pathway Developer:</strong>  <a href="mailto:?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p><!-- Change -->
+            <p><strong>Developer:</strong>  <a href="mailto:?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p><!-- Change -->
 
             <p><strong>Collaborating Peer Reviewers:</strong> Kira Braham, Heidi Kaufman, Indu Ohri, Breanna Simpson</p><!-- Change -->
             
@@ -66,13 +66,13 @@
 					<section class="menu-container" aria-labelledby="menu">
 						<h3 id="Menu">Menu</h3>
             <ol class="menu">
-              <!-- <li><a href="#lesson-plan-specs">Pathway Production Details</a></li> -->
+              <!-- <li><a href="#lesson-plan-specs">Lesson Plan Production Details</a></li> -->
               <li><a href="#outcomes">Learning Outcomes</a></li>
-              <li><a href="#subthemes">Subthemes (with Corresponding Texts)</a>
+              <li><a href="#pathways">Pathways (with Corresponding Texts)</a>
                 <ol>
-                  <li><a href="#subtheme-1"></a></li><!-- Change -->
-                  <li><a href="#subtheme-2"></a></li><!-- Change -->
-                  <li><a href="#subtheme-3"></a></li><!-- Change -->
+                  <li><a href="#pathway-1"></a></li><!-- Change -->
+                  <li><a href="#pathway-2"></a></li><!-- Change -->
+                  <li><a href="#pathway-3"></a></li><!-- Change -->
                 </ol>
               </li>
               <li><a href="#topics">Related Contemporary Topics</a></li>
@@ -85,8 +85,8 @@
                   <li><a href="#materials-5">Further Reading</a></li>
                 </ol>
               </li>
-							<li><a href="#biography">Pathway Developer Biography</a></li>
-              <li><a href="#citation">Lesson Plan Citation (MLA)</a></li>
+							<li><a href="#biography">Developer Biography</a></li>
+              <li><a href="#citation">Page/Lesson Plan Citation (MLA)</a></li>
             </ol>
           </section>
 
@@ -95,27 +95,27 @@
 
 					</section>
 
-          <section class="pathways" aria-labelledby="subthemes">
-						<h3 id="subthemes">Subthemes (with Corresponding Texts)</h3>
+          <section class="pathways" aria-labelledby="pathways">
+						<h3 id="pathways">Pathways (with Corresponding Texts)</h3>
 
-            <section aria-labelledby="subtheme-1">
-              <h4 id="subtheme-1"></h4><!-- Change -->
+            <section aria-labelledby="pathway-1">
+              <h4 id="pathway-1"></h4><!-- Change -->
               <p><strong>Recommended Texts (full references below):</strong> </p><!-- Change -->
             
               <p><strong>Summary:</strong> </p>
 
             </section>
 
-            <section aria-labelledby="subtheme-2">
-              <h4 id="subtheme-2"></h4><!-- Change -->
+            <section aria-labelledby="pathway-2">
+              <h4 id="pathway-2"></h4><!-- Change -->
               <p><strong>Recommended Texts (full references below):</strong> </p><!-- Change -->
 
               <p><strong>Summary:</strong> </p>
 
             </section>
 
-            <section aria-labelledby="subtheme-3">
-              <h4 id="subtheme-3"></h4><!-- Change -->
+            <section aria-labelledby="pathway-3">
+              <h4 id="pathway-3"></h4><!-- Change -->
               <p><strong>Recommended Texts (full references below):</strong> </p><!-- Change -->
 
               <p><strong>Summary:</strong> </p>
@@ -162,13 +162,13 @@
           </section>
 
 					<section aria-labelledby="biography">
-						<h3 id="biography">Pathway Developer Biography</h3>
+						<h3 id="biography">Developer Biography</h3>
 
 					</section>
 
 					<section aria-labelledby="citation">
-						<h3 id="citation">Page/Pathway Citation (MLA)</h3>
-						<p>, pathway dev. “.” Kira Braham, Heidi Kaufman, Indu Ohri, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/.html">https://undiscipliningvc.org/html/lesson_plans/.html</a>.</p><!-- Change -->
+						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
+						<p>, lesson plan dev. “.” Kira Braham, Heidi Kaufman, Indu Ohri, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/.html">https://undiscipliningvc.org/html/lesson_plans/.html</a>.</p><!-- Change -->
 					</section>
 			</main>
 			
