--- a/html/lesson_plans/seacole_autobiographical_writing.html
+++ b/html/lesson_plans/seacole_autobiographical_writing.html
@@ -48,9 +48,9 @@
           <img width="100%" height="300px" style="background: #e6e6e6;"/>
 
           <section aria-labelledby="lesson-plan-specs">
-						<h3 id="lesson-plan-specs">Pathway Production Details</h3>
+						<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
-            <p><strong>Pathway Developer:</strong> Heidi Kaufman <a href="mailto:hkaufman@uoregon.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+            <p><strong>Developer:</strong> Heidi Kaufman <a href="mailto:hkaufman@uoregon.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
 
             <p><strong>Collaborating Peer Reviewers:</strong> Kira Braham, Indu Ohri, Breanna Simpson</p>
             
@@ -64,13 +64,13 @@
 					<section class="menu-container" aria-labelledby="menu">
 						<h3 id="Menu">Menu</h3>
             <ol class="menu">
-              <!-- <li><a href="#lesson-plan-specs">Pathway Production Details</a></li> -->
+              <!-- <li><a href="#lesson-plan-specs">Lesson Plan Production Details</a></li> -->
               <li><a href="#outcomes">Learning Outcomes</a></li>
-              <li><a href="#subthemes">Subthemes (with Corresponding Texts)</a>
+              <li><a href="#pathways">Pathways (with Corresponding Texts)</a>
                 <ol>
-                  <li><a href="#subtheme-1">Race and Gender in Victorian Life Writing</a></li>
-                  <li><a href="#subtheme-2">Caribbean Autobiographical Writing</a></li>
-                  <li><a href="#subtheme-3">Caribbean Autobiographical Writing</a></li>
+                  <li><a href="#pathway-1">Race and Gender in Victorian Life Writing</a></li>
+                  <li><a href="#pathway-2">Caribbean Autobiographical Writing</a></li>
+                  <li><a href="#pathway-3">Caribbean Autobiographical Writing</a></li>
                 </ol>
               </li>
               <li><a href="#topics">Related Contemporary Topics</a></li>
@@ -83,36 +83,36 @@
                   <li><a href="#materials-5">Further Reading</a></li>
                 </ol>
               </li>
-							<li><a href="#biography">Pathway Developer Biography</a></li>
-              <li><a href="#citation">Lesson Plan Citation (MLA)</a></li>
+							<li><a href="#biography">Developer Biography</a></li>
+              <li><a href="#citation">Page/Lesson Plan Citation (MLA)</a></li>
             </ol>
           </section>
 
           <section aria-labelledby="outcomes">
 						<h3 id="outcomes">Learning Outcomes</h3>
 
-						<p>This pathway situates Mary Seacole’s <em>Wonderful Adventures of Mrs. Seacole</em> within the context of Victorian and postcolonial autobiographical writing. The selection of texts foregrounds two complicating features of Seacole’s work: her identity as a woman and as an Afro-Caribbean writer. The pathway’s selection of primary materials situate life writing and fictional autobiographies by Afro-Caribbean and British writers within a global arena. Secondary materials draw connections and points of comparison among primary materials, questioning the power and utility of autobiographical writing as a medium of engagement in debates about gender, slavery, freedom, colonialism, and British global power. Students working with this pathway will have opportunities to consider the legacy of Victorian autobiographical writing alongside contemporary responses by Caribbean authors. Materials in this pathway also consider historical and contemporary writing that emerges “in the wake,” to borrow Sharpe’s language, of colonialism, slavery, and forms of rebellion and resistance. Several clusters of items could be used as stand-alone materials or in conjunction with course materials not included in this pathway.</p>
+						<p>This lesson plan situates Mary Seacole’s <em>Wonderful Adventures of Mrs. Seacole</em> within the context of Victorian and postcolonial autobiographical writing. The selection of texts foregrounds two complicating features of Seacole’s work: her identity as a woman and as an Afro-Caribbean writer. The lesson plan’s selection of primary materials situate life writing and fictional autobiographies by Afro-Caribbean and British writers within a global arena. Secondary materials draw connections and points of comparison among primary materials, questioning the power and utility of autobiographical writing as a medium of engagement in debates about gender, slavery, freedom, colonialism, and British global power. Students working with this lesson plan will have opportunities to consider the legacy of Victorian autobiographical writing alongside contemporary responses by Caribbean authors. Materials in this lesson plan also consider historical and contemporary writing that emerges “in the wake,” to borrow Sharpe’s language, of colonialism, slavery, and forms of rebellion and resistance. Several clusters of items could be used as stand-alone materials or in conjunction with course materials not included in this lesson plan.</p>
 					</section>
 
-          <section class="pathways" aria-labelledby="subthemes">
-						<h3 id="subthemes">Subthemes (with Corresponding Texts)</h3>
+          <section class="pathways" aria-labelledby="pathways">
+						<h3 id="pathways">Pathways (with Corresponding Texts)</h3>
 
-            <section aria-labelledby="subtheme-1">
-              <h4 id="subtheme-1">Race and Gender in Victorian Life Writing</h4>
+            <section aria-labelledby="pathway-1">
+              <h4 id="pathway-1">Race and Gender in Victorian Life Writing</h4>
               <p><strong>Recommended Texts (full references below):</strong> Anonymous 1837; [1808] 2008; Brereton 1998; Brontë [1847] 2003; Martineau [1844] 2003; Nightingale [1852] 1979; Pennington 2018; Prince [1831] 2000</p>
             
               <p><strong>Summary:</strong> How might we approach Seacole’s constructions of Creole femininity? How does her text endorse, strategically deploy, or outright resist normative Victorian gender roles? How does her self-identification as a Creole Jamaican with “good Scotch blood” rework normative Victorian racial codes? Does Seacole leverage Victorian gender constructions, particularly her emphasis on her mother-like qualities, to her (dis)advantage? Students focusing on gender and race might consider the relations of these constructions in Seacole’s narrative and those from her contemporary autobiographical counterpart, Florence Nightingale. Alternatively, students might consider Seacole in light of nineteenth-century forms of autobiographical writing, such as the <em>fictional</em> creole Bertha Mason in <em>Jane Eyre</em> or the <em>autobiographical </em>Mary Prince in <em>A History of Mary Prince</em>.</p>
             </section>
 
-            <section aria-labelledby="subtheme-2">
-              <h4 id="subtheme-2">Caribbean Autobiographical Writing</h4>
+            <section aria-labelledby="pathway-2">
+              <h4 id="pathway-2">Caribbean Autobiographical Writing</h4>
               <p><strong>Recommended Texts (full references below):</strong> Anonymous [1808] 2008; Barringer and Modest 2018; Brereton 1998; Brodber 2014; James 2009; Levy 2010; McCaulay 2012; Paquet 2002; Prince [1831] 2000; Rhys 1966; Sharpe 2016; Williams [1837] 2001</p>
 
               <p><strong>Summary:</strong> Many scholars have noted that Seacole downplays her Jamaican identity in <em>Wonderful Adventures</em>. How then might we read the work of Seacole’s autobiographical lens in the creation of her identity as a Jamaican Creole and British woman? Does her text move us beyond British (Anglo-centric) ways of knowing? How does her autobiographical voice and self-construction recast Victorian identity and/or Victorian autobiographical writing? This pathway invites students to consider Seacole’s use of autobiographical conventions to invent her identity as a Creole professional and a respectable Victorian woman.</p>
             </section>
 
-            <section aria-labelledby="subtheme-3">
-              <h4 id="subtheme-3">Caribbean Autobiographical Writing</h4>
+            <section aria-labelledby="pathway-3">
+              <h4 id="pathway-3">Caribbean Autobiographical Writing</h4>
               <p><strong>Recommended Texts (full references below):</strong> Anonymous [1808] 2008; Barringer and Modest 2018; Brereton 1998; Brodber 2014; Brontë [1847] 2003; James 2009; Levy 2010; McCaulay 2012; Paquet 2002; Pennington 2018; Pinto 2019; Rhys 1966; Salih 2005; Sharpe 2016</p>
 
               <p><strong>Summary:</strong> Materials in this section invite consideration of Victorian autobiographical exchange by women writers in England and the Caribbean. The selection of texts respond to historiographies of nineteenth-century colonial culture and extant materials documenting the lives of enslaved peoples. In some cases, contemporary Caribbean writers on this list respond directly to Victorian texts, such as Jean Rhys’s <em>Wide Sargasso Sea</em>. In other cases, however, contemporary Caribbean writers wrestle with gaps, silences, and foreclosed perspectives in literary history. In the later case, these writers use what audiences may think they know about nineteenth-century culture as a springboard for illuminating the necessity and limits of recovery work. The selection of texts prompts consideration of whether or how contemporary Caribbean writers are producing Neo-Victorian narratives.</p>
@@ -226,13 +226,13 @@
           </section>
 
 					<section aria-labelledby="biography">
-						<h3 id="biography">Pathway Developer Biography</h3>
+						<h3 id="biography">Developer Biography</h3>
 
 					</section>
 
 					<section aria-labelledby="citation">
-						<h3 id="citation">Page/Pathway Citation (MLA)</h3>
-						<p>Heidi Kaufman, pathway dev. “Autobiographical Writing.” Kira Braham, Indu Ohri, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/seacole_autobiographical_writing.html">https://undiscipliningvc.org/html/lesson_plans/seacole_autobiographical_writing.html</a>.</p>
+						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
+						<p>Heidi Kaufman, lesson plan dev. “Autobiographical Writing.” Kira Braham, Indu Ohri, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/seacole_autobiographical_writing.html">https://undiscipliningvc.org/html/lesson_plans/seacole_autobiographical_writing.html</a>.</p>
 					</section>
 			</main>
 			
