--- a/html/lesson_plans/seacole_decolonizing_heathcare.html
+++ b/html/lesson_plans/seacole_decolonizing_heathcare.html
@@ -48,9 +48,9 @@
           <img width="100%" height="300px" style="background: #e6e6e6;"/>
 
           <section aria-labelledby="lesson-plan-specs">
-						<h3 id="lesson-plan-specs">Pathway Production Details</h3>
+						<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
-            <p><strong>Pathway Developer:</strong> Breanna Simpson <a href="mailto:bsimpson@yorku.ca?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+            <p><strong>Developer:</strong> Breanna Simpson <a href="mailto:bsimpson@yorku.ca?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
 
             <p><strong>Collaborating Peer Reviewers:</strong> Kira Braham, Heidi Kaufman, Indu Ohri</p>
             
@@ -64,13 +64,13 @@
 					<section class="menu-container" aria-labelledby="menu">
 						<h3 id="Menu">Menu</h3>
             <ol class="menu">
-              <!-- <li><a href="#lesson-plan-specs">Pathway Production Details</a></li> -->
+              <!-- <li><a href="#lesson-plan-specs">Lesson Plan Production Details</a></li> -->
               <li><a href="#outcomes">Learning Outcomes</a></li>
-              <li><a href="#subthemes">Subthemes (with Corresponding Texts)</a>
+              <li><a href="#pathways">Pathways (with Corresponding Texts)</a>
                 <ol>
-                  <li><a href="#subtheme-1">Seacole and Medicine: History and Practice</a></li>
-                  <li><a href="#subtheme-2">Contagion and Positionality: Disease, Race, and Seacole</a></li>
-                  <li><a href="#subtheme-3">Seacole’s Care Work: Identity, Context, Experience</a></li>
+                  <li><a href="#pathway-1">Seacole and Medicine: History and Practice</a></li>
+                  <li><a href="#pathway-2">Contagion and Positionality: Disease, Race, and Seacole</a></li>
+                  <li><a href="#pathway-3">Seacole’s Care Work: Identity, Context, Experience</a></li>
                 </ol>
               </li>
               <li><a href="#topics">Related Contemporary Topics</a></li>
@@ -83,22 +83,22 @@
                   <li><a href="#materials-5">Further Reading</a></li>
                 </ol>
               </li>
-							<li><a href="#biography">Pathway Developer Biography</a></li>
-              <li><a href="#citation">Lesson Plan Citation (MLA)</a></li>
+							<li><a href="#biography">Developer Biography</a></li>
+              <li><a href="#citation">Page/Lesson Plan Citation (MLA)</a></li>
             </ol>
           </section>
 
           <section aria-labelledby="outcomes">
 						<h3 id="outcomes">Learning Outcomes</h3>
 
-						<p>This pathway focuses on Mary Seacole’s positioning in the history of medicine and its relation to the study, teaching, and practice of the “care” professions, particularly nursing. It considers some of the ways that readings of Seacole and her autobiography, <em>Wonderful Adventures of Mrs. Seacole in Many Lands</em> are framed in the context of the history and practice of nursing. This pathway offers a starting point for interrogating westernized, Eurocentric conceptions of medical knowledge and care. It highlights how Seacole’s medical knowledge and care work differ from Eurocentric norms. For example, Seacole identifies as part of a lineage of Jamaican “doctresses,” and worked as a nurse, hotelier, and sutler. In this context, the pathway also explores Seacole’s knowledge and experience with treating epidemics, and how that discussion highlights issues of racism, prejudice, and marginalization in the diagnosis and treatment of infectious diseases. This pathway encourages students to explore how considerations and reconsiderations of Seacole’s positionality – in both history and scholarship – are complicated by, and complicate, the intersections of gender, race, knowledge, and power in the study and practice of healthcare.</p>						
+						<p>This lesson plan focuses on Mary Seacole’s positioning in the history of medicine and its relation to the study, teaching, and practice of the “care” professions, particularly nursing. It considers some of the ways that readings of Seacole and her autobiography, <em>Wonderful Adventures of Mrs. Seacole in Many Lands</em> are framed in the context of the history and practice of nursing. This lesson plan offers a starting point for interrogating westernized, Eurocentric conceptions of medical knowledge and care. It highlights how Seacole’s medical knowledge and care work differ from Eurocentric norms. For example, Seacole identifies as part of a lineage of Jamaican “doctresses,” and worked as a nurse, hotelier, and sutler. In this context, the lesson plan also explores Seacole’s knowledge and experience with treating epidemics, and how that discussion highlights issues of racism, prejudice, and marginalization in the diagnosis and treatment of infectious diseases. This lesson plan encourages students to explore how considerations and reconsiderations of Seacole’s positionality – in both history and scholarship – are complicated by, and complicate, the intersections of gender, race, knowledge, and power in the study and practice of healthcare.</p>						
 					</section>
 
-          <section class="pathways" aria-labelledby="subthemes">
-						<h3 id="subthemes">Subthemes (with Corresponding Texts)</h3>
+          <section class="pathways" aria-labelledby="pathways">
+						<h3 id="pathways">Pathways (with Corresponding Texts)</h3>
 
-            <section aria-labelledby="subtheme-1">
-              <h4 id="subtheme-1">Seacole and Medicine: History and Practice</h4>
+            <section aria-labelledby="pathway-1">
+              <h4 id="pathway-1">Seacole and Medicine: History and Practice</h4>
               <p><strong>Recommended Texts (full references below):</strong> Anionwu 2012; Chang 2017; Dellasega et al. 2007; Gilbert 2012; Howell 2010; Jackson and Gracia 2014; Kelsey 2018; Scerri 2020; Seacole 1857; Smith 2020; “Mary Seacole (1805-1881)” 2017</p>
             
               <p><strong>Summary:</strong> There continues to be much debate surrounding Seacole’s importance to the history of nursing, and her place in its pedagogy. This debate speaks to the evolving place of nursing as a profession within the broader medical community. It also raises questions of knowledge and power in medicine, highlighting the continued privileging of Eurocentric medical traditions and knowledge as the normative standard of medical practice and care. Questions that are often raised in discussions of Seacole’s place in the history and study of medicine include: what form(s) her medical, nursing, and care work took, her educational background and apparent lack of accredited, formalized training, her use of so-called “folk remedies” and “African medicines,” and her self-described role as a “doctress.” In <em>Wonderful Adventures, </em>Seacole identifies herself as part of a lineage of Jamaican “doctresses,” and describes her mother as keeping “a boarding house in Kingston, and [being], like very many of the Creole women, an admirable doctress.” Seacole’s medical training and practices challenge Victorian, Eurocentric, and colonial definitions of medical knowledge and practice.</p>
@@ -106,8 +106,8 @@
 							<p>This grouping provides students with an overview of Seacole’s positioning in the history and development of medicine (with a focus on British and North American nursing contexts). In particular, it examines the contexts of colonialism and empire within which Seacole was living, working, and writing, and how these contexts informed, and continues to inform, Seacole’s positioning in medical discourses. This grouping offers a space to explore the role of prejudice and discrimination in rendering both physical bodies and bodies of knowledge as “foreign” and “other,” and therefore to be viewed with suspicion or dismissal. It highlights how a consideration of Seacole can serve as a lens for exploring the intersections of colonialism, eurocentrism, marginalization, identity, and power in contemporary medical contexts, including nursing teaching and practice.</p>							
             </section>
 
-            <section aria-labelledby="subtheme-2">
-              <h4 id="subtheme-2">Contagion and Positionality: Disease, Race, and Seacole</h4>
+            <section aria-labelledby="pathway-2">
+              <h4 id="pathway-2">Contagion and Positionality: Disease, Race, and Seacole</h4>
               <p><strong>Recommended Texts (full references below):</strong> Anionwu 2012; Anionwu, Staring, and Staring-Derks 2015; Chang 2017; Gilbert 2008; 2012; Jackson and Gracia 2014; Nightingale 1860; Seacole 1857; Sleeth 2018; Smith 2020; Wald 2008; “Mary Seacole (1805-1881)” 2017</p>
 
 							<aside class="breakout-quote">
@@ -121,8 +121,8 @@
 							<p>This grouping examines how Seacole discusses disease and the spread of disease. A range of contextual and critical sources highlight links between race and disease in discussions of contagion, in both nineteenth-century contexts and today. This grouping also offers a starting point for a consideration of how practices of colonization and systemic racism continue to affect the ability of marginalized populations to access healthcare, as well as the quality of that care.</p>
             </section>
 
-            <section aria-labelledby="subtheme-3">
-              <h4 id="subtheme-3">Seacole’s Care Work: Identity, Context, Experience</h4>
+            <section aria-labelledby="pathway-3">
+              <h4 id="pathway-3">Seacole’s Care Work: Identity, Context, Experience</h4>
               <p><strong>Recommended Texts (full references below):</strong> Anionwu 2012; Anionwu, Staring, and Staring-Derks 2015; Chang 2017; Howell 2010; Scerri 2020; Seacole 1857; Sleeth 2018; “Mary Seacole (1805-1881)” 2017</p>
 
               <p><strong>Summary:</strong> Many of the conversations surrounding Mary Seacole’s care work are focused on her role as a nurse during the Crimean War, often juxtaposing her with, or subordinating her to, the life and work of Florence Nightingale. These debates raise questions about the nature of Seacole’s care work, both in the Crimean context and beyond it. Seacole’s medical knowledge and care work do not fit within traditional (western, British, colonial) definitions of the scope of a nurse’s knowledge and work, and she does not draw a clear distinction between her nursing and her other employments. In her own words, she “gained a reputation as a skilful nurse and doctress,” while also running a hotel and working as a sutler (selling provisions and supplies to the troops). By examining a combination of both Seacole’s <em>Wonderful Adventures of Mrs. Seacole in Many Lands </em>(particularly chapters II, IV, and VI), and a selection of secondary materials, this grouping highlights how considerations of gender, race, and class shaped Seacole’s care work, what forms and roles that care work took, and how and where she was able to undertake that work.</p>
@@ -158,7 +158,7 @@
             <section aria-labelledby="materials-2">
               <h4 id="materials-2">Neo-Victorian/Postcolonial Literary and Cultural Works</h4>
 
-							<p><em>This pathway does not include Neo-Victorian/Postcolonial literary materials at present.</em></p>
+							<p><em>This lesson plan does not include Neo-Victorian/Postcolonial literary materials at present.</em></p>
             </section>
 
             <section aria-labelledby="materials-3">
@@ -214,14 +214,14 @@
           </section>
 
 					<section aria-labelledby="biography">
-						<h3 id="biography">Pathway Developer Biography</h3>
+						<h3 id="biography">Developer Biography</h3>
 
 						<p>Breanna Simpson is a doctoral candidate and teaching assistant in the Department of English at York University in Toronto. Her research focuses on gender studies and queer theory, classical reception, world literature, and late Victorian fiction. Her dissertation, <em>In Pursuit of Cupid’s Daughter: The Construction and Control of Desire in Ancient and Victorian Narratives</em>, interrogates the concept of desire by examining forms and practices of reception, power, subjectivity, and identity.</p>
 					</section>
 
 					<section aria-labelledby="citation">
-						<h3 id="citation">Page/Pathway Citation (MLA)</h3>
-						<p>Breanna Simpson, pathway dev. “Decolonizing Health(care).” Kira Braham, Heidi Kaufman, Indu Ohri, collab. peer revs.; Adrian S. Wisnicki, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/seacole_decolonizing_heathcare.html">https://undiscipliningvc.org/html/lesson_plans/seacole_decolonizing_heathcare.html</a>.</p>
+						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
+						<p>Breanna Simpson, lesson plan dev. “Decolonizing Health(care).” Kira Braham, Heidi Kaufman, Indu Ohri, collab. peer revs.; Adrian S. Wisnicki, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/seacole_decolonizing_heathcare.html">https://undiscipliningvc.org/html/lesson_plans/seacole_decolonizing_heathcare.html</a>.</p>
 					</section>
 			</main>
 			
