--- a/html/lesson_plans/seacole_recentering_nursing.html
+++ b/html/lesson_plans/seacole_recentering_nursing.html
@@ -48,9 +48,9 @@
           <img width="100%" height="300px" style="background: #e6e6e6;"/>
 
           <section aria-labelledby="lesson-plan-specs">
-						<h3 id="lesson-plan-specs">Pathway Production Details</h3>
+						<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
-            <p><strong>Pathway Developer:</strong> Indu Ohri <a href="mailto:io3jc@virginia.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+            <p><strong>Developer:</strong> Indu Ohri <a href="mailto:io3jc@virginia.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
 
             <p><strong>Collaborating Peer Reviewers:</strong> Kira Braham, Heidi Kaufman, Breanna Simpson</p>
             
@@ -64,13 +64,13 @@
           <section class="menu-container" aria-labelledby="menu">
 						<h3 id="Menu">Menu</h3>
             <ol class="menu">
-              <!-- <li><a href="#lesson-plan-specs">Pathway Production Details</a></li> -->
+              <!-- <li><a href="#lesson-plan-specs">Lesson Plan Production Details</a></li> -->
               <li><a href="#outcomes">Learning Outcomes</a></li>
-              <li><a href="#subthemes">Subthemes (with Corresponding Texts)</a>
+              <li><a href="#pathways">Pathways (with Corresponding Texts)</a>
                 <ol>
-                  <li><a href="#subtheme-1">The Professionalization of Female Nursing</a></li>
-                  <li><a href="#subtheme-2">The “Heroic” Individual and the Community</a></li>
-                  <li><a href="#subtheme-3">Sentiment and the Body Politic</a></li>
+                  <li><a href="#pathway-1">The Professionalization of Female Nursing</a></li>
+                  <li><a href="#pathway-2">The “Heroic” Individual and the Community</a></li>
+                  <li><a href="#pathway-3">Sentiment and the Body Politic</a></li>
                 </ol>
               </li>
               <li><a href="#topics">Related Contemporary Topics</a></li>
@@ -83,26 +83,26 @@
                   <li><a href="#materials-5">Further Reading</a></li>
                 </ol>
               </li>
-              <li><a href="#biography">Pathway Developer Biography</a></li>
-              <li><a href="#citation">Lesson Plan Citation (MLA)</a></li>
+              <li><a href="#biography">Developer Biography</a></li>
+              <li><a href="#citation">Page/Lesson Plan Citation (MLA)</a></li>
             </ol>
           </section>
 
           <section aria-labelledby="outcomes">
 						<h3 id="outcomes">Learning Outcomes</h3>
 
-            <p>This pathway offers students an expansive look at the professionalization of female nursing in British, transatlantic, and transnational combat zones, specifically those of the Crimean War (1853-56) and the American Civil War (1861-65). Popular histories of nursing identify Florence Nightingale (or more recently Mary Seacole) and Clara Barton as the respective “founders” of nursing in England and America. Instead, this pathway will teach students about the establishment, development, and modernization of women’s nursing in wartime during the mid-nineteenth century. Florence Nightingale’s influence on Civil War nursing practices, along with Anne Reading’s service as a nurse in both conflicts, shows the extent to which female care work crossed national boundaries. The students could also survey the diverse range of nurses who cared for these transnational armies, including English, Irish, Jamaican, French, Piedmontese, Russian, and American (particularly African American) women.</p>
+            <p>This lesson plan offers students an expansive look at the professionalization of female nursing in British, transatlantic, and transnational combat zones, specifically those of the Crimean War (1853-56) and the American Civil War (1861-65). Popular histories of nursing identify Florence Nightingale (or more recently Mary Seacole) and Clara Barton as the respective “founders” of nursing in England and America. Instead, this lesson plan will teach students about the establishment, development, and modernization of women’s nursing in wartime during the mid-nineteenth century. Florence Nightingale’s influence on Civil War nursing practices, along with Anne Reading’s service as a nurse in both conflicts, shows the extent to which female care work crossed national boundaries. The students could also survey the diverse range of nurses who cared for these transnational armies, including English, Irish, Jamaican, French, Piedmontese, Russian, and American (particularly African American) women.</p>
 
             <p>Nightingale lost control of most of the female nursing performed in British hospitals that aided sickly or wounded soldiers and civilians on the frontlines during the Crimean War. As a result, multiple approaches to care evolved under the leadership of Mary Stanley, Mother Frances Bridgeman, Eliza Mackenzie, Henrietta LeMesurier, and Maria Parkes. By covering various models of British nursing, students will learn that these female administrators often differed from Nightingale’s methods and devised their own strategies for care work. They can also get a fuller picture of the alliances and rivalries between British women in the Crimea, along with the similarities and differences in their backgrounds and attitudes toward nursing in the military, naval, and civilian hospitals.</p>
 
-            <p>This pathway’s transnational scope will allow students to use comparative methods in examining Seacole’s clinical assessments and medical treatments (see her brief cameos in the neo-Victorian novel <em>The Rose of Sebastopol </em>[2009]). The fact that slavery was a key root cause of the Civil War and black female nurses served on the Union side make it an especially relevant context for Seacole’s work. Her experiences of gender, racial, and class discrimination during the Crimean War can be juxtaposed with those of Civil War nurses, such as Harriet Tubman, Susie King Taylor, and the fictional Charlotte Jenkins (from the show <em>Mercy Street </em>[2016-17]).</p>
+            <p>This lesson plan’s transnational scope will allow students to use comparative methods in examining Seacole’s clinical assessments and medical treatments (see her brief cameos in the neo-Victorian novel <em>The Rose of Sebastopol </em>[2009]). The fact that slavery was a key root cause of the Civil War and black female nurses served on the Union side make it an especially relevant context for Seacole’s work. Her experiences of gender, racial, and class discrimination during the Crimean War can be juxtaposed with those of Civil War nurses, such as Harriet Tubman, Susie King Taylor, and the fictional Charlotte Jenkins (from the show <em>Mercy Street </em>[2016-17]).</p>
 					</section>
 
-          <section class="pathways" aria-labelledby="subthemes">
-						<h3 id="subthemes">Subthemes (with Corresponding Texts)</h3>
+          <section class="pathways" aria-labelledby="pathways">
+						<h3 id="pathways">Pathways (with Corresponding Texts)</h3>
 
-            <section aria-labelledby="subtheme-1">
-              <h4 id="subtheme-1">The Professionalization of Female Nursing</h4>
+            <section aria-labelledby="pathway-1">
+              <h4 id="pathway-1">The Professionalization of Female Nursing</h4>
               <p><strong>Recommended Texts (full references below):</strong> Barton, n.d.; Blumenthal 2017; Choperena 2020; Furneaux 2016; Helmstadter 2020; Rappaport 2020; Seacole 2005; Summers 1983; Taylor [1902] 1999; Tennyson [1855] 1893; Wells and Bergin 2016; “Mary Seacole’s Headstone” 1973; “Mercy Street” 2016; “Crimean War,” n.d.</p>
             
               <p><strong>Summary:</strong> During the Crimean and American Civil Wars, multiple nations commissioned female nurses to serve their troops in the belief that care work was a natural extension of women’s domestic role and required the feminine virtues of kindness and sympathy. In reality, women became war nurses from a variety of motives: poverty, boredom, romance, piety, compassion, patriotism, and career aspirations. This grouping invites students to consider the rise and/or emergence of female nursing during wartime and women’s efforts to make it a legitimate profession for themselves and others. They will be introduced to nurses such as lady volunteers, Catholic nuns, male orderlies, working-class women, soldiers’ wives, former slaves, and even Queen Victoria. These materials could help students to examine the reception of female nurses, their position in the hospital hierarchy, and their everyday tasks and routines. In particular, they will think about the hostile reception that nurses often received from the masses and doctors until they proved themselves or garnered public approval for their work.</p>
@@ -110,8 +110,8 @@
               <p>Students could also inspect how nurses handled the pressures of racism, sexism, and classism, along with the dangers of military conflict, in order to perform their care work and earn respect for their accomplishments. One possible discussion topic is the competition that arose between nurses, such as Nightingale and the other nursing administrators from England, Nightingale and Seacole, or the fictional Mary Phinney and Anne Hastings from <em>Mercy Street</em>. However, nurses also cultivated a strong sense of professional solidarity, paid tribute to other members of their community, and trained younger generations of female care workers. For instance, the perceived “rivalry” between Nightingale and Seacole can be contrasted with the interracial friendship between Clara Barton and Susie King Taylor. Women’s camaraderies and rivalries in nursing can also serve as a starting point for students to examine first-wave feminism and women’s work movements later in the century. Female nurses’ narratives about their military service and related scholarly materials record their pioneering efforts to work with (or against) others across gender, race, class, national, and religious lines. During these conflicts, the highly-publicized entrance of female nurses onto battlefields and in hospitals was important because they generated new professional roles for women in multiple countries.</p>
             </section>
 
-            <section aria-labelledby="subtheme-2">
-              <h4 id="subtheme-2">The “Heroic” Individual and the Community</h4>
+            <section aria-labelledby="pathway-2">
+              <h4 id="pathway-2">The “Heroic” Individual and the Community</h4>
               <p><strong>Recommended Texts (full references below):</strong> Barton, n.d.; Helmstadter and Godden 2012; Markovitz 2009; Nightingale 1858; Seacole 2005; Taylor [1902] 1999; Tennyson [1855] 1893; “Mercy Street” 2016</p>
 
               <p><strong>Summary:</strong> In this grouping, students will explore the nuanced relationship between the “heroic” individual and the communities they served during wartime. Specifically, female nurses emerged as “heroines” during the Crimean War and the American Civil War through autobiographical self-narratives and/or popular representations of them that circulated among the public. For instance, Stefanie Markovitz finds that the media images of Nightingale as the “Lady with the Lamp” created new models of female heroism in Victorian fiction. These representations contrasted with male soldiers being viewed as wounded and emotional figures in need of rescue from brutal wars characterized by high casualties, army mismanagement, and worthless causes. This grouping will guide students to reflect on how female nurses ended up as “heroes” for behaving like (or portraying themselves as) what Barton calls the “nurses, consolers, and saviours of men.” It could even serve as a counterpart or addition to courses focused on male soldiers or military conflict by highlighting the labor of women on the front lines during major nineteenth-century wars.</p>
@@ -119,8 +119,8 @@
               <p>While these “heroes” received public veneration, they sought to use their status to benefit the communities they could relate to based on identity factors such as gender, race, class, nationality, religion, or profession. For instance, nurses felt a strong sense of community with other female nurses, men whom they tended as patients, the nations they served, and even members of the enemy army. Their role as “heroes” allowed men and women to speak on behalf of the groups they belonged to so they could advance key social, political, or professional reforms that would improve their collective well-being. Students exploring this grouping could analyze how nurses lobbied for the good of their communities and the limitations or drawbacks to the idea of “heroism.” This subgroup invites students to consider how we conceptualize a “hero” or an “enemy,” how this notion is raced, classed, or gendered, and how the hero stands for, with, or against the community. One interesting pairing is Seacole (a “Crimean heroine”) nursing the colonial British army like a “mother” juxtaposed with Susie King Taylor (an unsung heroine) tending black soldiers as a nurse and cook for the 33rd United States Colored Infantry Regiment. In her autobiography, Taylor commemorates the military service of African American men and women during the Civil War as part of her appeal to readers to protect black people from oppression in Jim Crow America.</p>              
             </section>
 
-            <section aria-labelledby="subtheme-3">
-              <h4 id="subtheme-3">Sentiment and the Body Politic</h4>
+            <section aria-labelledby="pathway-3">
+              <h4 id="pathway-3">Sentiment and the Body Politic</h4>
               <p><strong>Recommended Texts (full references below):</strong> Barton, n.d.; Bates 2015; Blumenthal 2017; Helmstadter and Godden 2012; McMahon 2009; Nightingale 1870; Taylor [1902] 1999; Tennyson [1855] 1893; Walters 2020; “Mercy Street” 2016; “Crimean War,” n.d.</p>
 
               <p><strong>Summary:</strong> This grouping addresses the role of emotion in wartime contexts and the ways in which feeling served as an index of the metaphoric health of the body politic in different nations. How might sentimentalized depictions of nurses, soldiers, or heads of state reshape gender roles, army nursing, military reform, or royal iconography? Do representations of Nightingale as “the Lady with the Lamp,” Seacole as the “mother” of the British army, or Barton as the “Angel of the Battlefield” undermine or reinscribe the role of the Victorian Angel in the House/American True Woman? Why do the bodies of men and women (particularly wounded bodies) and the emotional reactions that they express or provoke in others function as a barometer of national well-being? For example, what does the publicity hyping Queen Victoria’s sympathy for the physical sufferings of her troops in the Crimea suggest about the state’s welfare? How does this compare to Seacole playfully impersonating the Queen in Chapter XIX of <em>Wonderful Adventures</em> or <em>Punch</em> reconfiguring her into a modern King Col showing royal largesse in “A Stir for Seacole”?</p>
@@ -218,13 +218,13 @@
           </section>
 
           <section aria-labelledby="biography">
-						<h3 id="biography">Pathway Developer Biography</h3>
+						<h3 id="biography">Developer Biography</h3>
 
 					</section>
 
 					<section aria-labelledby="citation">
-						<h3 id="citation">Page/Pathway Citation (MLA)</h3>
-						<p>Indu Ohri, pathway dev. “Recentering Nursing in Wartime.” Kira Braham, Heidi Kaufman, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/seacole_recentering_nursing.html">https://undiscipliningvc.org/html/lesson_plans/seacole_recentering_nursing.html</a>.</p>
+						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
+						<p>Indu Ohri, lesson plan dev. “Recentering Nursing in Wartime.” Kira Braham, Heidi Kaufman, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/seacole_recentering_nursing.html">https://undiscipliningvc.org/html/lesson_plans/seacole_recentering_nursing.html</a>.</p>
 					</section>
 			</main>
 			
