--- a/html/lesson_plans/seacole_decentering_britishness.html
+++ b/html/lesson_plans/seacole_decentering_britishness.html
@@ -48,9 +48,9 @@
           <img width="100%" height="300px" style="background: #e6e6e6;"/>
 
           <section aria-labelledby="lesson-plan-specs">
-						<h3 id="lesson-plan-specs">Pathway Production Details</h3>
+						<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
-            <p><strong>Pathway Developer:</strong> Kira Braham <a href="mailto:kira.braham@vanderbilt.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+            <p><strong>Developer:</strong> Kira Braham <a href="mailto:kira.braham@vanderbilt.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
 
             <p><strong>Collaborating Peer Reviewers:</strong> Heidi Kaufman, Indu Ohri, Breanna Simpson</p>
             
@@ -64,12 +64,12 @@
 					<section class="menu-container" aria-labelledby="menu">
 						<h3 id="Menu">Menu</h3>
             <ol class="menu">
-              <!-- <li><a href="#lesson-plan-specs">Pathway Production Details</a></li> -->
+              <!-- <li><a href="#lesson-plan-specs">Lesson Plan Production Details</a></li> -->
               <li><a href="#outcomes">Learning Outcomes</a></li>
-              <li><a href="#subthemes">Subthemes (with Corresponding Texts)</a>
+              <li><a href="#pathways">Pathways (with Corresponding Texts)</a>
                 <ol>
-                  <li><a href="#subtheme-1">Postcolonial Positions</a></li>
-                  <li><a href="#subtheme-2">Seacole as Text</a></li>
+                  <li><a href="#pathway-1">Postcolonial Positions</a></li>
+                  <li><a href="#pathway-2">Seacole as Text</a></li>
                 </ol>
               </li>
               <li><a href="#topics">Related Contemporary Topics</a></li>
@@ -82,22 +82,22 @@
                   <li><a href="#materials-5">Further Reading</a></li>
                 </ol>
               </li>
-							<li><a href="#biography">Pathway Developer Biography</a></li>
-              <li><a href="#citation">Lesson Plan Citation (MLA)</a></li>
+							<li><a href="#biography">Developer Biography</a></li>
+              <li><a href="#citation">Page/Lesson Plan Citation (MLA)</a></li>
             </ol>
           </section>
 
           <section aria-labelledby="outcomes">
 						<h3 id="outcomes">Learning Outcomes</h3>
 
-						<p>This pathway is designed to foreground conversations about Seacole’s complex positioning as a colonial subject of color and to encourage critical discourse about “Britishness” (or “Englishness”) as an identity category. In highlighting how the realities of global empire and its afterlives foreclose the possibility of defining Britishness as a stable national identity, this pathway takes a transimperial and strategically presentist approach to teaching <em>Wonderful Adventures of Mrs. Seacole in Many Lands</em>. Students will be encouraged to consider how Seacole’s experiences as an entrepreneur, nurse, and war heroine and her account of those experiences in <em>Wonderful Adventures</em> were shaped by her Jamaican, colonial, and racial identities, as well as how these identities shape readings of Seacole and her text in the twenty-first century. The subthemes offer suggestions for how this pathway might be organized into smaller units, but the suggested materials can be read in any configuration.</p>
+						<p>This lesson plan is designed to foreground conversations about Seacole’s complex positioning as a colonial subject of color and to encourage critical discourse about “Britishness” (or “Englishness”) as an identity category. In highlighting how the realities of global empire and its afterlives foreclose the possibility of defining Britishness as a stable national identity, this lesson plan takes a transimperial and strategically presentist approach to teaching <em>Wonderful Adventures of Mrs. Seacole in Many Lands</em>. Students will be encouraged to consider how Seacole’s experiences as an entrepreneur, nurse, and war heroine and her account of those experiences in <em>Wonderful Adventures</em> were shaped by her Jamaican, colonial, and racial identities, as well as how these identities shape readings of Seacole and her text in the twenty-first century. The pathways offer suggestions for how this lesson plan might be organized into smaller units, but the suggested materials can be read in any configuration.</p>
 					</section>
 
-          <section class="pathways" aria-labelledby="subthemes">
-						<h3 id="subthemes">Subthemes (with Corresponding Texts)</h3>
+          <section class="pathways" aria-labelledby="pathways">
+						<h3 id="pathways">Pathways (with Corresponding Texts)</h3>
 
-            <section aria-labelledby="subtheme-1">
-              <h4 id="subtheme-1">Postcolonial Positions</h4>
+            <section aria-labelledby="pathway-1">
+              <h4 id="pathway-1">Postcolonial Positions</h4>
               <p><strong>Recommended Texts (full references below):</strong> Gikandi 1997; Hall 2002; Longfellow 1883; Poon 2007; Punch Magazine 1856; Salih 2010; Seacole 2005</p>
             
               <p><strong>Summary:</strong> In placing an emphasis on reading <em>Wonderful Adventures</em> through the lens of postcolonial studies, this grouping could serve as an introduction to students unfamiliar with the commitments and concepts of postcolonial critique, while providing them with a vocabulary to discuss Seacole’s self-representation and her representation by others as a nineteenth-century Jamaican and British woman of color. This grouping includes:</p>
@@ -110,8 +110,8 @@
 							</ul>
             </section>
 
-            <section aria-labelledby="subtheme-2">
-              <h4 id="subtheme-2">Seacole as Text</h4>
+            <section aria-labelledby="pathway-2">
+              <h4 id="pathway-2">Seacole as Text</h4>
               <p><strong>Recommended Texts (full references below):</strong> Adebayo 2015; Fleming 2016; McCrae 2019; Pinto 2019; Salih 2010; Seacole 2005; Shepherd 2005</p>
 
               <p><strong>Summary:</strong> This grouping is focused on the competing narratives surrounding the historical legacy of Mary Seacole and how her identities as a Jamaican, woman of color, and “Black Briton” inform contemporary discussions and representations of her and her <em>Wonderful Adventures</em>. This grouping could help students to conceptualize and discuss the relationship between nineteenth-century literature, collective memory, the continuance of systemic racism, and racial justice. This grouping includes:</p>
@@ -154,7 +154,7 @@
             <section aria-labelledby="materials-2">
               <h4 id="materials-2">Neo-Victorian/Postcolonial Literary and Cultural Works</h4>
 
-							<p><em>This pathway does not include Neo-Victorian/Postcolonial literary materials at present.</em></p>
+							<p><em>This lesson plan does not include Neo-Victorian/Postcolonial literary materials at present.</em></p>
             </section>
 
             <section aria-labelledby="materials-3">
@@ -193,13 +193,13 @@
           </section>
 
 					<section aria-labelledby="biography">
-						<h3 id="biography">Pathway Developer Biography</h3>
+						<h3 id="biography">Developer Biography</h3>
 
 					</section>
 
 					<section aria-labelledby="citation">
-						<h3 id="citation">Page/Pathway Citation (MLA)</h3>
-						<p>Kira Braham, pathway dev. “Decentering Britishness.” Heidi Kaufman, Indu Ohri, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/decentering_britishness.html">https://undiscipliningvc.org/html/lesson_plans/decentering_britishness.html</a>.</p>
+						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
+						<p>Kira Braham, lesson plan dev. “Decentering Britishness.” Heidi Kaufman, Indu Ohri, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/decentering_britishness.html">https://undiscipliningvc.org/html/lesson_plans/decentering_britishness.html</a>.</p>
 					</section>
 			</main>
 			
